syntax = "proto3";

option go_package = "/auth";

package auth;

message LoginRequest {
  string username = 1;
  string email = 3;
  string password = 2;
}

message LoginCredential {
  string token = 1;
  repeated string roles = 2;
}

message LoginResponse {
  string code = 1;
  LoginCredential data = 2;
}

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
}